--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10476,12 +10476,16 @@ a.text-dark:focus {
   margin-left: 10px;
 }
 
+.toptab {
+  margin-top: -15px;
+}
+
 #sidebar-wrapper {
-  top: 52px;
+  top: 60px;
   left: -200px;
   width: 200px;
-  background-color: grey;
-  color: white;
+  background-color: white;
+  color: grey;
   position: fixed;
   height: 100%;
   z-index: 1;
@@ -10502,14 +10506,14 @@ a.text-dark:focus {
 }
 
 .sidebar-nav li a {
-  color: white;
+  color: black;
   display: block;
   text-decoration: none;
 }
 
 .sidebar-nav li a:hover {
   background: rgba(255, 255, 255, 0.25);
-  color: white;
+  color: red;
   text-decoration: none;
 }
 
